# pdiff

./: README.md  pyproject.toml  requirements.txt
docs/: howto.txt
docs/source/: api.rst  conf.py  index.rst  modules.rst  pdiff.rst
scripts/: accelerate_1gpu_fp32.yaml  sample_inference.ipynb  sample_train_script.sh
src/pdiff/: analysis.py  dataset.py  image_transforms.py  metadata.py  model.py  training.py
tests/: __init__.py  conftest.py  test_analysis.py  test_dataset.py  test_environment.py  test_image_transforms.py  test_inference.py  test_metadata.py  test_model.py
tests/test_data/images/: oneline_metadata.pkl  relative_metadata.pkl
tests/test_data/sample_pdiff_model/: model_index.json
tests/test_data/sample_pdiff_model/scheduler/: scheduler_config.json
tests/test_data/sample_pdiff_model/text_encoder/: config.json
tests/test_data/sample_pdiff_model/unet/: config.json
tests/test_data/sample_pdiff_model/vae/: config.json
